src/style/main.css
/*Fonts*/
@font-face {
    font-family: merriweather;
    font-weight: normal;
    font-style: normal;
    font-display: swap;
    src:
        url(/fonts/Merriweather-VariableFont_opsz,wdth,wght.woff2) format(woff2),
        url(/fonts/Merriweather-VariableFont_opsz,wdth,wght.ttf) format(ttf);
}
@font-face {
    font-family: firaCode;
    font-display: swap;
    src:
        url(/fonts/FiraCode-VariableFont_wght.woff2) format(woff2),
        url(/fonts/FiraCode-VariableFont_wght.ttf) format(ttf);
}

/*Global Colors*/
:root {
    --main-bg-color: #121314;
    --sidebar-bg-color: #1a1b1c;
    --secondary-bg-color: #D088D7;
    --separator-color: #2a2b2c;
    --main-text-color: aliceblue;
    --secondary-text-color: #050505;
    --link-text-color: #99C1F1;
    --link-visited-color: #E3B9E9;
}

/*Text elements styling*/
.mainHeader {
    width: 100%;
    text-align: center;
    font-family: merriweather, 'Lucida Sans', monospace;
    font-size:72px;
}
.mainSubheader {
    width: 100%;
    text-align: center;
    font-family: merriweather, 'Lucida Sans', monospace;
    font-weight:bold;
    font-size: 42px;
}
h1 {
    font-family: merriweather, 'Lucida Sans', monospace;
}
nav a {
    color:var(--secondary-text-color);
    text-decoration:none;
    width:100%;
    display:block;
    padding:10px 5px 10px;
    background-color:var(--secondary-bg-color);
    margin-bottom:3px;
}

nav a:visited {
    color: var(--secondary-text-color);
}

nav a:hover {
    color: var(--secondary-bg-color);
    background-color: var(--secondary-text-color);
}
article p, article ul, article ol {
    margin-left:50px;
    margin-right:50px;
}
sup {
    font-size: 8px;
}
a {
    color: var(--link-text-color);
}
a:visited {
    color: var(--link-visited-color);
}

/*Layout*/
html,body {
    height:100%;
    margin:0;
    font-family: firaCode, 'Lucida Sans', monospace;
}
body {
    position:relative;
    background-color: var(--main-bg-color);
    color: var(--main-text-color);
    margin: 0;
    min-height: 100vh;
    display:flex;
    flex-direction:column;
}
.notFooter {
    display:flex;
    flex:row nowrap;
    flex:1;
}
aside {
    background-color: var(--sidebar-bg-color);
    border-right: 3px solid var(--separator-color);
    width:15%;
    overflow-wrap:break-word;
    overflow:hidden;
}
main {
    padding: 10px 20px;
    width: 100%;
    overflow: visible;
}
footer {
    display:block;
    position: relative;
    width: 100%;
    bottom:0;
    margin-bottom:0;
    background-color: var(--sidebar-bg-color);
    border-top: 3px solid var(--separator-color);
    padding: 5px 20px 10px;
}

hr {
    color: var(--separator-color);
}

